# C-search-engine

./: CMakeLists.txt  README.md
include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
src/: CMakeLists.txt  ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp  main.cpp
